--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="../src/styles/styles.css" />
+    <title>Digital Agency</title>
   </head>
   <body>
     <div id="root"></div>
-      </body>
+    <script src="https://kit.fontawesome.com/d4cd33a1a3.js" crossorigin="anonymous"></script>  
+  </body>
 </html>
